# servantapp

./: LICENSE  README.md  servantapp.cabal  stack.yaml
src/main/: Main.hs
